--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!--Began with the file you gave us at https://dev.to/iggredible/html-forms-101-3g7l-->
-
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <form method="POST" action="create">
-    <label for="name">Last Name:</label>
+    <label for="lastname">Last Name:</label>
     <input type="text" id="lastname" name="last_name">
     <button type="submit">Submit</button>
     <br> <br>
-    <label for="name">First Name:</label>
+    <label for="firstname">First Name:</label>
     <input type="text" id="firstname" name="first_name">
     <button type="submit">Submit</button>
     <br><br>
-    <label for="name">Author:</label>
+    <label for="title">Author:</label>
     <input type="text" id="title" name="title">
+    <button type="submit">Submit</button>
+    <br><br>
+    <label for="period">Period:</label>
+    <input type="text" id="period" name="period">
+    <button type="submit">Submit</button>
+    <br><br>
+    <label for="genre">Genre:</label>
+    <input type="text" id="genre" name="genre">
     <button type="submit">Submit</button>
   </form>
 </head>
@@ -21,3 +29,4 @@
 
 <script src=""></script></body>
 </html>
+-->
