--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
       <button type="submit">Submit</button>
     </form>
 
-<script src=""></script></body>
+    <script src="./scripts.js"></script>
   </body>
 </html>
