--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!--Began with the file you gave us at https://dev.to/iggredible/html-forms-101-3g7l-->
-<!--
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <form method="POST" action="create">
     <label for="lastname">Last Name:</label>
     <input type="text" id="lastname" name="last_name">
-    <button type="submit">Submit</button>
+    <!-- <button type="submit">Submit</button> -->
     <br> <br>
     <label for="firstname">First Name:</label>
     <input type="text" id="firstname" name="first_name">
-    <button type="submit">Submit</button>
+    <!-- <button type="submit">Submit</button> -->
     <br><br>
-    <label for="title">Author:</label>
+    <label for="title">Title:</label>
     <input type="text" id="title" name="title">
-    <button type="submit">Submit</button>
+    <!-- <button type="submit">Submit</button> -->
     <br><br>
     <label for="period">Period:</label>
     <input type="text" id="period" name="period">
-    <button type="submit">Submit</button>
+    <!-- <button type="submit">Submit</button> -->
     <br><br>
     <label for="genre">Genre:</label>
     <input type="text" id="genre" name="genre">
-    <button type="submit">Submit</button>
+    <!-- <button type="submit">Submit</button> -->
   </form>
 </head>
 <body>
 
-<script src=""></script></body>
+<script src="./scripts.js"></script></body>
 </html>
--->
+
