--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!--Began with the file you gave us at https://dev.to/iggredible/html-forms-101-3g7l-->
 
 <!DOCTYPE html>
@@ -28,49 +27,5 @@
 </head>
 <body>
 
-<script src=""></script></body>
+<script src="./scripts.js"></script></body>
 </html>
-
-=======
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- TODO{serena.hasler}: Add 👇🏽-->
-    <title>Document</title>
-  </head>
-  <body>
-    <form method="POST" action="create">
-      <div>
-        <label for="lastname">Last Name:</label>
-        <input type="text" id="lastname" name="last_name" />
-      </div>
-
-      <div>
-        <label for="firstname">First Name:</label>
-        <input type="text" id="firstname" name="first_name" />
-      </div>
-
-      <div>
-        <label for="title">Author:</label>
-        <input type="text" id="title" name="title" />
-      </div>
-
-      <div>
-        <label for="period">Period:</label>
-        <input type="text" id="period" name="period" />
-      </div>
-
-      <div>
-        <label for="genre">Genre:</label>
-        <input type="text" id="genre" name="genre" />
-      </div>
-      <button type="submit">Submit</button>
-    </form>
-
-    <script src="./scripts.js"></script>
-  </body>
-</html>
->>>>>>> 4e218afe4a0731cd302e61d27c69373a0a622014
